--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "twitch",
-  "version": "0.1.3",
+  "name": "twitch-utils",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "TheDevYellowy",
   "typings": "./index.d.ts",
   "license": "ISC",
   "dependencies": {
+    "crypto": "^1.0.1",
+    "express": "^4.18.2",
     "node-fetch": "^2.6.11",
     "ws": "^8.13.0"
   }
